Scrolling layout issues introduced to the checking app (SF-501) - Fixes issue with the text panel and the question panel forcing the navigation bar off the viewport - Updated question dialog to implement the checking text panel in a way that doesn't affect the checking app - Fixed up various typing issues with recent change over to QuestionDoc

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/question-dialog/question-dialog.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/question-dialog/question-dialog.component.scss
@@ -17,7 +17,10 @@ mdc-dialog-actions {
   text-align: end;
 }
 
-.split-container {
+.text-container {
   height: 8em;
   margin-bottom: 2.5em;
+  app-checking-text {
+    position: relative;
+  }
 }
